--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,13 +30,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install
       - name: Build
         run: pnpm run build
       - name: Setup Pages
